--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "15.4.6",
     "postcss": "^8.5.6",
     "primeicons": "^7.0.0",
+    "primereact": "^10.9.7",
     "react": "19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "19.1.0",
